The project is compatible with java 8 (for now)